to do -make array of h1 and h2 objects

--- a/popup.html
+++ b/popup.html
@@ -72,6 +72,9 @@
 	<tr><td class="td1">Title</td><td class="td2"><div id='seo_title'>...</div></td><td id='seo_title_count' class="count"></td></tr>
 	<tr><td class="td1">Description</td><td class="td2"><div id='seo_description'>...</div></td><td id='seo_description_count' class="count"></td></tr>
 	<tr><td class="td1">Keywords</td><td class="td2"><div id='seo_keywords'>...</div></td><td id='seo_keywords_count' class="count"></td></tr>
+    <tr><td class="td1">H1</td><td class="td2"><div id='h1'>...</div></td><td id='h1_keywords_count' class="count"></td></tr>
+    <tr><td class="td1">H2</td><td class="td2"><div id='h2'>...</div></td><td id='h2_keywords_count' class="count"></td></tr>
+
 </table>
 
 <script src="popup.js"></script>
