--- a/popup.html
+++ b/popup.html
@@ -74,6 +74,8 @@
 	<tr><td class="td1">Keywords</td><td class="td2"><div id='seo_keywords'>...</div></td><td id='seo_keywords_count' class="count"></td></tr>
     <tr><td class="td1">H1</td><td class="td2"><div id='h1'>...</div></td><td id='h1_keywords_count' class="count"></td></tr>
     <tr><td class="td1">H2</td><td class="td2"><div id='h2'>...</div></td><td id='h2_keywords_count' class="count"></td></tr>
+    <tr><td class="td1">IMG_alt</td><td class="td2"><div id='IMG_alt'>...</div></td><td id='IMG_alt_keywords_count' class="count"></td></tr>
+    <tr><td class="td1">IMG_rel</td><td class="td2"><div id='IMG_rel'>...</div></td><td id='IMG_rel_keywords_count' class="count"></td></tr>
 
 </table>
 
