--- a/popup.html
+++ b/popup.html
@@ -76,7 +76,7 @@
     <tr><td class="td1">H2</td><td class="td2"><div id='h2'>...</div></td><td id='h2_keywords_count' class="count"></td></tr>
     <tr><td class="td1">IMG_alt</td><td class="td2"><div id='IMG_alt'>...</div></td><td id='IMG_alt_keywords_count' class="count"></td></tr>
     <tr><td class="td1">IMG_rel</td><td class="td2"><div id='IMG_rel'>...</div></td><td id='IMG_rel_keywords_count' class="count"></td></tr>
-
+    <tr><td class="td1">IMG_rel</td><td class="td2"><div id='IMG_rel2'>111</br>111</br>111</div></td><td id='IMG_rel_keywords_count2' class="count"></td></tr>
 </table>
 
 <script src="popup.js"></script>
