--- a/popup.html
+++ b/popup.html
@@ -60,10 +60,6 @@
             font-size:12px;
         }
 
-        .td2 {
-            
-        }
-
         .count {
             font-size:10px;
             color:#777;
@@ -76,9 +72,7 @@
         }
 
         .match, .mark, .markMark {
-            background: #fff481 !important;
-            padding-left:3px;
-            padding-right:2px;
+            background: #ffff00 !important;
             color:black;
         }
 
