--- a/popup.html
+++ b/popup.html
@@ -105,12 +105,18 @@
             float:right;
             font-size:10px;
         }
+        .tool {
+            margin-left:7px;
+        }
 
     </style>
     <title>SEO meta helper</title>
 </head>
 <body>
-<div class="cacheBox"><a href="#" id="google_cache" target="_blank">google cache</a></div>
+<div class="cacheBox">
+    <a href="#" class="tool" id="robots" target="_blank">robots.txt</a>
+    <a href="#" class="tool" id="google_cache" target="_blank">google cache</a>
+</div>
 <div class="input_label">Keywords to highlight:</div>
 <textarea  name="keyword" class="keywords" autofocus ></textarea>
 <table>
