--- a/popup.html
+++ b/popup.html
@@ -102,6 +102,7 @@
         }
         .tool {
             margin-left:7px;
+            text-decoration:none;
         }
         #indexing_p {
             display:none;
@@ -136,6 +137,7 @@
 </head>
 <body>
 <div class="cacheBox">
+    <a href="#" class="tool" id="liveinternet" target="_blank">liveinternet</a>
     <a href="#" class="tool" id="robots" target="_blank">robots.txt</a>
     <a href="#" class="tool" id="google_cache" target="_blank">google cache</a>
 </div>
