now CS return valid json

--- a/popup.html
+++ b/popup.html
@@ -115,11 +115,7 @@
         #indexing_p .td2 a {
             color:#dd0000;
         }
-        
-        #img_alt,
-        #img_rel{
-            display:none;
-        }
+
         .input_copy {
             position:absolute;
             top:-1000px;
@@ -155,8 +151,8 @@
 	<tr id="indexing_p"><td class="td1">Indexing</td><td class="td2">indexing disallowed by <a href="#" id="robots2" target="_blank">robots.txt</a></td></tr>
     <tr id="h1_p"><td class="td1">H1</td><td class="td2"><div id='h1'></div></td></tr>
     <tr><td class="td1">H2</td><td class="td2"><div id='h2'></div></td></tr>
-    <tr id="img_alt"><td class="td1">IMG_alt</td><td class="td2"><div id='IMG_alt'></div></td></tr>
-    <tr id="img_rel"><td class="td1">IMG_rel</td><td class="td2"><div id='IMG_rel'></div></td></tr>
+    <tr id="img_alt_p"><td class="td1">IMG_alt</td><td class="td2"><div id='IMG_alt'></div></td></tr>
+    <tr id="img_rel_p"><td class="td1">IMG_rel</td><td class="td2"><div id='IMG_rel'></div></td></tr>
     
 </table>
 
