--- a/popup.html
+++ b/popup.html
@@ -38,7 +38,11 @@
             width:600px;
             border-collapse:collapse;
         }
-        .hidden_tr { display:none; }
+
+        .hidden_tr {
+            display:none;
+        }
+
         table tr:hover {
             background:#fbfbfb;
         }
@@ -104,10 +108,10 @@
             margin-left:7px;
             text-decoration:none;
         }
-        #indexing_p {
+        #indexing_p{
             display:none;
         }
-        #indexing_p.show_tr {
+        #indexing_p.show_tr{
             display:table-row;
         }
         .missing .td2,
