sitemap.xml, google index, yandex index

--- a/popup.html
+++ b/popup.html
@@ -137,9 +137,12 @@
 </head>
 <body>
 <div class="cacheBox">
-    <a href="#" class="tool" id="liveinternet" target="_blank">liveinternet</a>
+    <a href="#" class="tool" id="liveinternet" target="_blank">Liveinternet</a>
+    <a href="#" class="tool" id="sitemap" target="_blank">sitemap.xml</a>
     <a href="#" class="tool" id="robots" target="_blank">robots.txt</a>
-    <a href="#" class="tool" id="google_cache" target="_blank">google cache</a>
+    <a href="#" class="tool" id="yandex_index" target="_blank">Yandex index</a>
+    <a href="#" class="tool" id="google_index" target="_blank">Google index</a>
+    <a href="#" class="tool" id="google_cache" target="_blank">Google cache</a>
 </div>
 <div class="input_label">Keywords to highlight:</div>
 <textarea name="keyword" class="keywords" autofocus ></textarea>
