--- a/popup.html
+++ b/popup.html
@@ -44,7 +44,7 @@
         }
 
         table tr:hover {
-            background:#fbfbfb;
+            background:#f5f5f5;
         }
 
         table td {
@@ -125,24 +125,31 @@
             top:-1000px;
             left:-1000px;
         }
+
         .copy {
-            opacity:0.4;
+            opacity:0;
         }
-        .copy:hover {
+        .td2:hover .copy{
+            opacity: 0.4;
+        }
+        .td2:hover .copy:hover {
             opacity:1;
         }
-
+        .keywords{
+            border-radius: 4px;
+            outline: none;
+        }
     </style>
     <title>SEO meta helper</title>
 </head>
 <body>
 <div class="cacheBox">
-    <a href="#" class="tool" id="liveinternet" target="_blank">Liveinternet</a>
+    <!-- <a href="#" class="tool" id="liveinternet" target="_blank">Liveinternet</a> -->
     <a href="#" class="tool" id="sitemap" target="_blank">sitemap.xml</a>
     <a href="#" class="tool" id="robots" target="_blank">robots.txt</a>
-    <a href="#" class="tool" id="yandex_index" target="_blank">Yandex index</a>
-    <a href="#" class="tool" id="google_index" target="_blank">Google index</a>
-    <a href="#" class="tool" id="google_cache" target="_blank">Google cache</a>
+    <!-- <a href="#" class="tool" id="yandex_index" target="_blank">Yandex index</a> -->
+    <!-- <a href="#" class="tool" id="google_index" target="_blank">Google index</a> -->
+    <!-- <a href="#" class="tool" id="google_cache" target="_blank">Google cache</a> -->
 </div>
 <div class="input_label">Keywords to highlight:</div>
 <textarea name="keyword" class="keywords" autofocus ></textarea>
@@ -151,7 +158,7 @@
 <input type="text" class="input_copy" id="input_description" value=""/>
 
 <table>
-	<tr><td class="td1">Title <span id='seo_title_count' class="count" title="Number of characters"></span></td><td class="td2"><span id='seo_title'></span> <a href="#" id="copy_title" class="copy" title="Copy text"><img src="copy.svg" width="15"/></a></a></td></tr>
+	<tr id="title_p"><td class="td1">Title <span id='seo_title_count' class="count" title="Number of characters"></span></td><td class="td2"><span id='seo_title'></span> <a href="#" id="copy_title" class="copy" title="Copy text"><img src="copy.svg" width="15"/></a></a></td></tr>
 	<tr id="description_p"><td class="td1">Description <span id='seo_description_count' class="count" title="Number of characters"></span></td><td class="td2"><span id='seo_description'></span> <a href="#" id="copy_description" class="copy" title="Copy text"><img src="copy.svg" width="15"/></a></a></td></tr>
 	<tr id="keywords_p"><td class="td1">Keywords <span id='seo_keywords_count' class="count" title="Number of characters"></span></td><td class="td2"><div id='seo_keywords'></div></td></tr>
 	<tr id="canonical_p"><td class="td1">Canonical</td><td class="td2"><div id='canonical'></div></td></tr>
