--- a/popup.html
+++ b/popup.html
@@ -163,7 +163,7 @@
 <div class="input_label">Keywords to highlight:</div>
 <div class="keyword_parent">
     <textarea name="keyword" class="keywords" autofocus ></textarea>
-    <span class="clear_keywords" onclick="clearKeywords()">&#215;</span>
+    <span class="clear_keywords" onclick="clearKeywords()">×</span>
 </div>
 
 <input type="text" class="input_copy" id="input_title" value=""/>
