--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <style>
@@ -16,19 +16,22 @@
             font-size:13px;
         }
 
-        #IMG_alt::-webkit-scrollbar,#IMG_rel::-webkit-scrollbar, #h2::-webkit-scrollbar, #h1::-webkit-scrollbar {
+        body::-webkit-scrollbar,
+        .header_content_block::-webkit-scrollbar{
             width: 8px;
         }
 
-        #IMG_alt::-webkit-scrollbar-track,#IMG_rel::-webkit-scrollbar-track, #h2::-webkit-scrollbar-track, #h1::-webkit-scrollbar-track {
+        body::-webkit-scrollbar-track,
+        .header_content_block::-webkit-scrollbar-track {
             background-color: #F5F5F5;
         }
 
-        #IMG_alt::-webkit-scrollbar-thumb,#IMG_rel::-webkit-scrollbar-thumb, #h2::-webkit-scrollbar-thumb, #h1::-webkit-scrollbar-thumb {
+        body::-webkit-scrollbar-thumb, 
+        .header_content_block::-webkit-scrollbar-thumb{ 
             background-color: #aaa;
         }
 
-        #h1, #h2, #IMG_alt, #IMG_rel{
+        .header_content_block{
             max-height:120px;
             overflow-y:auto;
             overflow-x:hidden;
@@ -164,6 +167,14 @@
         .clear_keywords.show{
             display: flex
         }
+        #copy_description.hide,
+        #copy_title.hide{
+            display: none;
+        }
+        .headers{
+            display: none;
+        }
+        
     </style>
     <title>SEO meta helper</title>
 </head>
@@ -189,13 +200,17 @@
 	<tr id="title_p"><td class="td1">Title <span id='seo_title_count' class="count" title="Number of characters"></span></td><td class="td2"><span id='seo_title'></span> <a href="#" id="copy_title" class="copy" title="Copy text"><img src="copy.svg" width="15"/></a></a></td></tr>
 	<tr id="description_p"><td class="td1">Description <span id='seo_description_count' class="count" title="Number of characters"></span></td><td class="td2"><span id='seo_description'></span> <a href="#" id="copy_description" class="copy" title="Copy text"><img src="copy.svg" width="15"/></a></a></td></tr>
 	<tr id="keywords_p"><td class="td1">Keywords <span id='seo_keywords_count' class="count" title="Number of characters"></span></td><td class="td2"><div id='seo_keywords'></div></td></tr>
-	<tr id="canonical_p"><td class="td1">Canonical</td><td class="td2"><div id='canonical'></div></td></tr>
+	<tr id="canonical_p"><td class="td1">Canonical</td><td class="td2"><a href="" id='canonical' target="_blank"></a></td></tr>
     <tr id="indexing_p" class="indexing_tr"><td class="td1">Indexing</td><td class="td2">Indexing disallowed by <a href="#" id="robots2" target="_blank">robots.txt</a></td></tr>
     <tr id="indexing_m" class="indexing_tr"><td class="td1">Indexing</td><td class="td2">Indexing disallowed by metatag</td></tr>
-    <tr id="h1_p"><td class="td1">H1</td><td class="td2"><div id='h1'></div></td></tr>
-    <tr><td class="td1">H2</td><td class="td2"><div id='h2'></div></td></tr>
-    <tr id="img_alt_p"><td class="td1">IMG_alt</td><td class="td2"><div id='IMG_alt'></div></td></tr>
-    <tr id="img_rel_p"><td class="td1">IMG_rel</td><td class="td2"><div id='IMG_rel'></div></td></tr>
+    <tr id="h1_p"><td class="td1">H1</td><td class="td2"><div id='h1' class="header_content_block"></div></td></tr>
+    <tr class="headers header2"><td class="td1">H2</td><td class="td2"><div id='h2' class="header_content_block"></div></td></tr>
+    <tr class="headers header3"><td class="td1">H3</td><td class="td2"><div id='h3' class="header_content_block"></div></td></tr>
+    <tr class="headers header4"><td class="td1">H4</td><td class="td2"><div id='h4' class="header_content_block"></div></td></tr>
+    <tr class="headers header5"><td class="td1">H5</td><td class="td2"><div id='h5' class="header_content_block"></div></td></tr>
+    <tr class="headers header6"><td class="td1">H6</td><td class="td2"><div id='h6' class="header_content_block"></div></td></tr>
+    <tr id="img_alt_p"><td class="td1">IMG_alt</td><td class="td2"><div id='IMG_alt' class="header_content_block"></div></td></tr>
+    <tr id="img_rel_p"><td class="td1">IMG_rel</td><td class="td2"><div id='IMG_rel' class="header_content_block"></div></td></tr>
     
 </table>
 
